# fastapi-oauth20

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_docs.txt  search.json  sitemap.xml  zensical.toml
.github/workflows/: changelog.yml  ci.yml  docs.yml  lint.yml  test.yml
advanced/: index.html
changelog/: index.html
clients/dingding/: index.html
clients/dingtalk/: index.html
clients/douyin/: index.html
clients/feishu/: index.html
clients/gitee/: index.html
clients/github/: index.html
clients/google/: index.html
clients/linuxdo/: index.html
clients/oschina/: index.html
clients/qq/: index.html
clients/wechat_mp/: index.html
clients/wechat_open/: index.html
clients/wechat_work/: index.html
clients/weibo/: index.html
docs/: changelog.md  explanation.md  fastapi.md  index.md  install.md  integration.md  status.md  usage.md
docs/clients/: dingding.md  dingtalk.md  douyin.md  feishu.md  gitee.md  github.md  google.md  linuxdo.md  oschina.md  qq.md  wechat_mp.md  wechat_open.md  wechat_work.md  weibo.md
example/: fastapi.py  main.py
explanation/: index.html
fastapi/: index.html
fastapi_oauth20/: __init__.py  callback.py  errors.py  oauth20.py
fastapi_oauth20/clients/: feishu.py  gitee.py  github.py  google.py  linuxdo.py  oschina.py  weixin_mp.py  weixin_open.py
fastapi_oauth20/integrations/: fastapi.py
install/: index.html
integration/: index.html
search/: search_index.json
src/fastapi_oauth20/: errors.py  oauth20.py
src/fastapi_oauth20/clients/: feishu.py  gitee.py  github.py  google.py  oschina.py
src/fastapi_oauth20/integrations/: fastapi.py
status/: index.html
tests/: conftest.py  test_basic.py  test_callback.py  test_docs_examples.py  test_errors.py  test_fastapi.py  test_oauth20.py
tests/clients/: test_feishu.py  test_gitee.py  test_github.py  test_google.py  test_linuxdo.py  test_oschina.py  test_weixin_mp.py  test_weixin_open.py
usage/: index.html
