[project]
name = "fastapi-oauth20"
description = "在 FastAPI 中异步授权 OAuth 2.0 客户端"
dynamic = [
    "version",
]
authors = [
    { name = "Wu Clan", email = "jianhengwu0407@gmail.com" },
]
dependencies = [
    "httpx>=0.18.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/fastapi-practices/fastapi_oauth20"
repository = "https://github.com/fastapi-practices/fastapi_oauth20"

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "fastapi>=0.100.0",
    "respx>=0.22.0",
]
lint = [
    "ruff>=0.9.9",
    "pre-commit>=4.1.0",
]

[tool.ruff]
line-length = 120
cache-dir = "./.ruff_cache"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-between-types = 1
order-by-type = true

[tool.ruff.format]
quote-style = "single"

[tool.pdm]
distribution = true
version = { source = "file", path = "fastapi_oauth20/__init__.py" }

[tool.pdm.scripts]
lint = "pre-commit run --all-files"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
