[project]
name = "fastapi-oauth20"
description = "在 FastAPI 中异步授权 OAuth 2.0 客户端"
authors = [
    { name = "Wu Clan", email = "jianhengwu0407@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dynamic = ['version']
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.18.0",
]

[project.urls]
homepage = "https://github.com/fastapi-practices/fastapi_oauth20"
repository = "https://github.com/fastapi-practices/fastapi_oauth20"

[dependency-groups]
dev = [
    "click==8.2.1",
    "fastapi>=0.119.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ty>=0.0.1a23",
]
lint = [
    "pre-commit>=4.3.0",
]
docs = [
    "mkdocs-material==9.6.7",
    "mkdocs-glightbox==0.4.0"
]

[tool.uv]
python-downloads = "manual"
default-groups = ["dev", "lint"]

[tool.ruff]
line-length = 120
unsafe-fixes = true
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-between-types = 1
order-by-type = true

[tool.ruff.format]
quote-style = "single"

[tool.pdm]
distribution = true
version = { source = "file", path = "fastapi_oauth20/__init__.py" }

[tool.hatch.build.targets.wheel]
packages = ["fastapi_oauth20"]

[tool.hatch.version]
path = "fastapi_oauth20/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
